# rmessenger

./: Cargo.toml
examples/: send_text_message.rs
src/bot/: mod.rs  utils.rs
