[package]
name = "rmessenger"
version = "0.1.0"
authors = ["nocotan <noconoco.lib@gmail.com>"]
repository = "https://github.com/nocotan/rmessenger"
keywords = ["facebook", "bot"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "A Rust Wrapper for the FaceBook Messenger Bot API"

[dependencies]
hyper = "0.11.19"
hyper-tls = "0.1.2"
tokio-core = "0.1.6"
futures = "0.1.11"
url = "1.4.0"
pretty_env_logger = "0.1"
